crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__govern_the_guildless_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 44,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Gain control of target monocolored creature."
      },
      "node": {
        "Spell": {
          "source_text": "Gain control of target monocolored creature.",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 43,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "Gain control of target monocolored creature"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "GainControl",
                    "target": {
                      "type": "Typed",
                      "type_filters": [
                        "Creature"
                      ],
                      "controller": null,
                      "properties": [
                        {
                          "type": "ColorCount",
                          "comparator": "EQ",
                          "count": 1
                        }
                      ]
                    }
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Spell",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null
          },
          "die_results": [],
          "root_transforms": [
            {
              "SetMinXValue": 0
            },
            {
              "SetDescription": "Gain control of target monocolored creature."
            }
          ]
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 45,
          "end_byte": 236,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Forecast — {1}{U}, Reveal this card from your hand: Target creature becomes the color or colors of your choice until end of turn. (Activate only during your upkeep and only once each turn.)"
      },
      "node": {
        "Spell": {
          "source_text": "Target creature becomes the color or colors of your choice until end of turn",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 76,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "Target creature becomes the color or colors of your choice until end of turn"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Choose",
                    "choice_type": "Color",
                    "persist": false
                  },
                  "duration": "UntilEndOfTurn",
                  "sub_ability": {
                    "kind": "Spell",
                    "effect": {
                      "type": "GenericEffect",
                      "static_abilities": [
                        {
                          "mode": "Continuous",
                          "affected": {
                            "type": "ParentTarget"
                          },
                          "modifications": [
                            {
                              "type": "AddChosenColor",
                              "mode": "Set"
                            }
                          ],
                          "condition": null,
                          "affected_zone": null,
                          "effect_zone": null,
                          "active_zones": [],
                          "characteristic_defining": false,
                          "description": "the color or colors of your choice"
                        }
                      ],
                      "duration": "UntilEndOfTurn",
                      "target": {
                        "type": "Typed",
                        "type_filters": [
                          "Creature"
                        ],
                        "controller": null,
                        "properties": []
                      }
                    },
                    "cost": null,
                    "sub_ability": null,
                    "duration": "UntilEndOfTurn",
                    "description": null,
                    "target_prompt": null,
                    "condition": null,
                    "optional_targeting": false,
                    "optional": false,
                    "forward_result": false
                  },
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": null,
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Activated",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null,
            "cost": {
              "type": "Composite",
              "costs": [
                {
                  "type": "Mana",
                  "cost": {
                    "type": "Cost",
                    "shards": [
                      "Blue"
                    ],
                    "generic": 1
                  }
                },
                {
                  "type": "Reveal",
                  "count": 1
                }
              ]
            },
            "activation_restrictions": [
              {
                "type": "DuringYourUpkeep"
              },
              {
                "type": "OnlyOnceEachTurn"
              }
            ],
            "activation_zone": "Hand",
            "description": "Forecast — {1}{U}, Reveal this card from your hand: Target creature becomes the color or colors of your choice until end of turn.",
            "stages": [
              "ExtractCostReduction",
              "ExtractManaSpendTrigger"
            ]
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    }
  ],
  "source_text": "Gain control of target monocolored creature.\nForecast — {1}{U}, Reveal this card from your hand: Target creature becomes the color or colors of your choice until end of turn. (Activate only during your upkeep and only once each turn.)",
  "card_name": "Govern the Guildless"
}
