crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__govern_the_guildless_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "GainControl",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": null,
          "properties": [
            {
              "type": "ColorCount",
              "comparator": "EQ",
              "count": 1
            }
          ]
        }
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Gain control of target monocolored creature.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "Choose",
        "choice_type": "Color",
        "persist": false
      },
      "cost": {
        "type": "Composite",
        "costs": [
          {
            "type": "Mana",
            "cost": {
              "type": "Cost",
              "shards": [
                "Blue"
              ],
              "generic": 1
            }
          },
          {
            "type": "Reveal",
            "count": 1
          }
        ]
      },
      "sub_ability": {
        "kind": "Spell",
        "effect": {
          "type": "GenericEffect",
          "static_abilities": [
            {
              "mode": "Continuous",
              "affected": {
                "type": "ParentTarget"
              },
              "modifications": [
                {
                  "type": "AddChosenColor",
                  "mode": "Set"
                }
              ],
              "condition": null,
              "affected_zone": null,
              "effect_zone": null,
              "active_zones": [],
              "characteristic_defining": false,
              "description": "the color or colors of your choice"
            }
          ],
          "duration": "UntilEndOfTurn",
          "target": {
            "type": "Typed",
            "type_filters": [
              "Creature"
            ],
            "controller": null,
            "properties": []
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": "UntilEndOfTurn",
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "duration": "UntilEndOfTurn",
      "description": "Forecast — {1}{U}, Reveal this card from your hand: Target creature becomes the color or colors of your choice until end of turn.",
      "target_prompt": null,
      "activation_restrictions": [
        {
          "type": "DuringYourUpkeep"
        },
        {
          "type": "OnlyOnceEachTurn"
        }
      ],
      "activation_zone": "Hand",
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
